Person : detail view + refacto block heritage

--- a/app/templates/pages/page.html
+++ b/app/templates/pages/page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n mezzanine_tags keyword_tags  pages_tags %}
+{% load i18n mezzanine_tags keyword_tags organization_tags pages_tags %}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
@@ -56,8 +56,18 @@
                         {{ page.content }}
                     {% endblock %}
                     {% block page_link %}
+                        {% with object.links.all as links %}
+                            {% if links %}
+                                {% include 'core/inc/link.html' %}
+                            {% endif %}
+                        {% endwith %}
                     {% endblock %}
                     {% block page_audio %}
+                        {% with object.audios.all as audios %}
+                            {% if audios %}
+                                {% include 'core/inc/audio.html' %}
+                            {% endif %}
+                        {% endwith %}
                     {% endblock %}
                 </div>
 
@@ -65,14 +75,34 @@
 
         </div>
         {% block page_slider %}
+        {% with object.images.all|get_type:'page_slider' as slider_images %}
+            {% if slider_images %}
+                {% include 'core/inc/slider.html' %}
+            {% endif %}
+        {% endwith %}
         {% endblock %}
         {% block page_video %}
+            {% with object.videos.all as videos %}
+                {% if videos %}
+                    {% include 'core/inc/slider_video.html' %}
+                {% endif %}
+            {% endwith %}
         {% endblock %}
         {% block page_person_list %}
+        {% endblock %}
+        {% block page_file %}
+            {% with object.files.all as files %}
+                {% if files %}
+                    {% include 'core/inc/files.html' %}
+                {% endif %}
+            {% endwith %}
         {% endblock %}
         {% block products %}
         {% endblock %}
         {% block page_sub_content %}
+            {% with object.blocks.all as blocks %}
+                {% include "core/inc/block.html" %}
+            {% endwith %}
         {% endblock %}
         {% block page_related_content %}
         {% endblock %}
