--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -13,6 +13,7 @@
 @import 'boxes/page-box';
 @import 'boxes/brief-box';
 @import 'boxes/person-list-box';
+@import 'boxes/event-line-box';
 
 // Sliders
 @import 'sliders/slider-page';
