--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -27,10 +27,10 @@
 
 {% block breadcrumb_menu %}
     {{ block.super }}
-    <li class="breadcrumb__item">
-        <a href="{% url 'event_list' %}" class="breadcrumb__link">{% trans "Agenda" %}</a>
-    </li>
     {% if tag or location or month or week or author %}
+        <li class="breadcrumb__item">
+            <a href="{% url 'event_list' %}" class="breadcrumb__link">{% trans "Agenda" %}</a>
+        </li>
         <li class="breadcrumb__item active">
             {% if tag %}
                 {% trans "Tag:" %} {{ tag }}
@@ -47,32 +47,65 @@
                 {% trans "Author:" %} {{ author.get_full_name|default:author.username }}
             {% endif %}
         </li>
+    {% else %}
+        <li class="breadcrumb__item active">
+            {% trans "Agenda" %}
+        </li>
     {% endif %}
 {% endblock %}
 
 {% block main %}
-<div class="msry__container">
-    <div class="msry__sizer">
-        {% for event in events.object_list %}
-         {% include 'agenda/includes/event_card.html' %}
-        {% endfor %}
+    <div class="page page--{% spaceless %}{% block page_class %}{% endblock %}{% endspaceless %}">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
+                    <h1 class="dotted">
+                        {% if page %}
+                            {{ page.richtextpage.meta_title }}
+                        {% else %}
+                            {% trans "Agenda" %}
+                        {% endif %}
+                    </h1>
+
+                    <div class="page__filters">
+                        {% keywords_for mezzanine_agenda.event as tags %}
+                        {% all_events as all_events %}
+                        {% if tags %}
+                            <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %} ({{ all_events.count }})</a>
+                            {% for t in tags %}
+                                <a href="{% url "event_list_tag" t.slug %}" class="button{% if tag == t %} button--black{% else %} button--white{% endif %}">
+                                    {{ t }} ({{ t.item_count }})
+                                </a>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-xs-12">
+
+                    <div class="white-bg page__content">
+                        <div class="container">
+                            {% for event in events.object_list %}
+                                {% include 'agenda/includes/event_linecard.html' %}
+                            {% endfor %}
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        {% pagination_for events %}
+
     </div>
-</div>
-{% endblock %}
-{# <a href='{% icalendar_url %}' target="_blank" class="small  push-ical">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>#}
-
-{% pagination_for events %}
-
-{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-{% include "generic/includes/disqus_counts.html" %}
-{% endif %}
-
-{% block page_title %}
-    <h1 class="dotted">
-        {% if page %}
-            {{ page.richtextpage.meta_title }}
-        {% else %}
-            {% trans "Agenda" %}
-        {% endif %}
-    </h1>
 {% endblock %}
