--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -34,7 +34,7 @@
 
 {% block page_tags %}
     {% if event.departments.all.0 %}
-        <div class="tag dashed dashed--gray">
+        <div class="tag dashed">
           {{ event.departments.all.0.department.name }}
         </div>
     {% endif %}
