--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -141,11 +141,22 @@
 {% endblock %}
 
 {% block page_link %}
-    {% with event.links.all as links %}
-        {% if links %}
-            {% include 'core/inc/link.html' %}
-        {% endif %}
-    {% endwith %}
+    <div class="row">
+        {% with event.links.all as links %}
+            {% if links %}
+                <div class="col-xs-6">
+                    {% include 'core/inc/link.html' %}
+                </div>
+            {% endif %}
+        {% endwith %}
+        <div class="col-xs-6">
+            <div class="small-text">
+                Notes de productions<br />
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, modi sunt culpa sequi. Consequatur voluptate sapiente minus repellat earum, rerum asperiores, architecto quibusdam, dolore, soluta placeat aliquid. Voluptatum, dignissimos, quisquam.
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 {% block page_audio %}
