--- a/app/static/src/sass/global/_typography.scss
+++ b/app/static/src/sass/global/_typography.scss
@@ -164,3 +164,12 @@ h1 + .chapo {
 	font-weight: weight(regular);
 
 }
+
+.small-text {
+
+	@include font-size(xs);
+    @include line-height(1);
+	@include typeface(serif);
+	font-weight: weight(light);
+
+}
