Remove the booking button if there is no price

--- a/app/templates/agenda/includes/event_metainfo.html
+++ b/app/templates/agenda/includes/event_metainfo.html
@@ -27,7 +27,7 @@
 
 {% if unit_booking %}
 
-    {% if event.prices.all.0|floatformat != '0' %}
+    {% if event.prices.all.0|floatformat != '0' and event.prices.all|length > 0 %}
         {% for price in event.prices.all %}
             {% if forloop.first %}
                 <div class="page__meta-title">Tarifs</div>
