Job list implementation

--- a/app/static/src/sass/modules/_all.scss
+++ b/app/static/src/sass/modules/_all.scss
@@ -14,6 +14,7 @@
 @import 'boxes/brief-box';
 @import 'boxes/person-list-box';
 @import 'boxes/event-line-box';
+@import 'boxes/job-line-box';
 
 // Sliders
 @import 'sliders/slider-page';
