--- a/app/templates/job/job_offer_list.html
+++ b/app/templates/job/job_offer_list.html
@@ -1,7 +1,7 @@
 {% extends "pages/page.html" %}
 {% load i18n mezzanine_tags keyword_tags pages_tags organization_tags %}
 
-{% block meta_title %}{{ job_offer.meta_title }}{% endblock %}
+{% block meta_title %}{% trans "Jobs" %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
 {{ job_offer.description }}
@@ -12,16 +12,21 @@
 {% endblock %}
 
 {% block page_title %}
-  <h1 class="dashed">{% trans "Jobs" %}</h1>
+  <h1 class="dotted">{% trans "Jobs" %}</h1>
 {% endblock %}
 
 {% block page_content %}
+
     {% if job_offer %}
-      {% for jo in job_offer %}
-        {% include "job/inc/job_offer_card.html" %}
-      {% endfor %}
+
+        {% for jo in job_offer %}
+            {% include "job/inc/job_offer_card.html" %}
+        {% endfor %}
+
     {% else %}
-      <p>{% trans "Please come back later. There is no job offer at the moment." %}</p>
+
+        <p>{% trans "Please come back later. There is no job offer at the moment." %}</p>
+
     {% endif %}
 
 {% endblock %}
