--- a/static/src/sass/modules/boxes/_job-line-box.scss
+++ b/static/src/sass/modules/boxes/_job-line-box.scss
@@ -18,6 +18,16 @@ $module: ".job-line-box";
 
     }
 
+    &--candidacy {
+
+        #{$module}__title {
+
+            @include margin-top(0);
+
+        }
+
+    }
+
     &__title {
 
         @include margin-bottom(1);
