--- a/static/src/sass/layout/_footer.scss
+++ b/static/src/sass/layout/_footer.scss
@@ -25,7 +25,7 @@ $module: ".footer";
 
     &__content {
 
-        background: #8e8e8e;
+        background: #6b6b6b;
 
         @include padding(1 0);
 
