Add messages to job details

--- a/app/static/src/sass/modules/_all.scss
+++ b/app/static/src/sass/modules/_all.scss
@@ -34,6 +34,7 @@
 @import 'share-links';
 @import 'partners-list';
 @import 'banner';
+@import 'messages';
 @import 'project-details';
 
 // Typography modules
