--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -211,7 +211,7 @@
                                                         {% trans "Project lead team" %}
                                                     </div>
                                                     <div class="project-details__item-desc">
-                                                        <a href="{% url "page" project.lead_team.pages.all.0 %}">{{ project.lead_team.pages.all.0.title }}</a>
+                                                        <a href="{% url "page" project.lead_team.pages.all.0 %}">{{ project.lead_team.short }}</a>
                                                     </div>
                                                   {% elif project.lead_organization %}
                                                     <div class="project-details__item-title">
@@ -231,7 +231,7 @@
                                                 <div class="project-details__item-desc">
                                                     {% for team in project.teams.all %}
                                                         {% if team.pages.all %}
-                                                            <a href="{% url "page" team.pages.all.0 %}">{{ team.pages.all.0.title }}</a><br>
+                                                            <a href="{% url "page" team.pages.all.0 %}">{{ team.short }}</a><br>
                                                         {% endif %}
                                                     {% endfor %}
                                                     {% for organization in project.organizations.all %}
